--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,10 @@ jobs:
       - name: Build
         run: npm run build
 
-      # Publicera till github-pages-branch (kräver gh-pages som dependency: npm install --save-dev gh-pages)
-      - name: Deploy to GitHub Pages
+      # Publicera till gh-pages-branch (kräver gh-pages som dependency: npm install --save-dev gh-pages)
+      - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
-          publish_branch: github-pages
+          publish_branch: gh-pages
