Update package.json to reflect project name and homepage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "nikasguldkant",
+  "homepage": "https://sgxman.github.io/Nikasguldkant/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,6 +9,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "typecheck": "tsc --noEmit -p tsconfig.app.json"
   },
   "dependencies": {
