--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nikasguldkant",
-  "homepage": "https://sgxman.github.io/Nikasguldkant/",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
