--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install gh-pages
+        run: npm install -g gh-pages
+
       - name: Build
         run: npm run deploy
 
